# fpfmt

./: AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: comprehensive_tests.rs  hard_tests.rs  lib.rs  pow10tab.rs
tests/: comprehensive.rs  hard_tests.rs
tools/bench/: Cargo.toml
tools/bench/benches/: format.rs
tools/pow10gen/: Cargo.toml
tools/pow10gen/src/: main.rs
tools/wasm-size/: Cargo.toml
tools/wasm-size/src/: lib.rs
