[workspace]
members = [".", "tools/pow10gen"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Intentional throughout this bit-manipulation library.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"

[package]
name = "fpfmt"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dev-dependencies]
chacha8rand = "0.1"
