
[package]
name = "fpfmt"
version = "0.2.0"
edition = "2024"
description = "Floating-point formatting and parsing, ported from rsc/fpfmt"
license = "BSD-3-Clause"
repository = "https://github.com/wado-lang/fpfmt"
autotests = false
exclude = ["tools/", "tests/"]

[workspace]
members = [".", "tools/pow10gen", "tools/bench", "tools/wasm-size"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Intentional throughout this bit-manipulation library.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"

[lints]
workspace = true

[[test]]
name = "comprehensive"
path = "tests/comprehensive.rs"

[profile.release]
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
chacha8rand = "0.1"
